# ViMouse

./: Cargo.toml  README.md
src/: caps_lock_remap.rs  caps_lock_suppress.rs  config.rs  input.rs  jump_grid.rs  main.rs  monitor.rs  overlay.rs  overlay_grid.rs  overlay_icon.rs  overlay_window.rs  platform.rs  platform_input.rs  state.rs
