[package]
name = "vimouse"
version = "1.0.0"
edition = "2021"

[package.metadata.bundle]
name = "ViMouse"
identifier = "io.github.exxml.vimouse"
category = "Utility"

[dependencies]
ctrlc = "3"
font8x8 = "0.3"
pixels = "0.13"
rdev = { version = "0.5", features = ["unstable_grab"] }
winit = "0.28"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2.21"
